--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap"
 		rel="stylesheet">
+	<script src="https://kit.fontawesome.com/23e60cc156.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,13 +25,13 @@
 		<div id="banner">
 			<img class="arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
 			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-			<i class="fa-solid fa-circle"></i>
-			<i class="fa-solid fa-circle"></i>
-			<i class="fa-solid fa-circle"></i>
-			<i class="fa-solid fa-circle"></i>
 			<img class="arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
 			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 			<div class="dots">
+				<i class="fa-solid fa-circle dot dot_selected"></i>
+				<i class="fa-solid fa-circle dot"></i>
+				<i class="fa-solid fa-circle dot"></i>
+				<i class="fa-solid fa-circle dot"></i>
 			</div>
 		</div>
 		<section id="about-us" class="container">
