--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap"
 		rel="stylesheet">
-	<script src="https://kit.fontawesome.com/23e60cc156.js" crossorigin="anonymous"></script>
+	<script src="assets/script.js" async></script>
 </head>
 
 <body>
