--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
 	</header>
 	<main>
 		<div id="banner">
-			<img class="arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
+			<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
 			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-			<img class="arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
+			<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
 			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-			<div class="dots">
-			</div>
+			<div class="dots"></div>
 		</div>
 		<section id="about-us" class="container">
 			<div>
